change contact info color

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ footer {
 .contact-info a {
   padding: 10px;
   display: inline-block;
-  color: #DC143C;
+  color: #FF0000;
   text-decoration: none;
 }
 
