--- a/css/styles.css
+++ b/css/styles.css
@@ -49,18 +49,18 @@ a:hover {
   margin: 0 auto;
   padding: 60px 50px;
   overflow: hidden;
-  flex: 1 1 auto;
+  flex: 1;
 }
 .col-narrow {
-  width: 30%;
+  width: 25%;
   float: left;
-  flex: 1 1 auto;
+  flex: 1;
 }
 .col-wide {
   width: 70%;
   float: left;
   padding-left: 20px;
-  flex: 1 1 auto;
+  flex: 1;
 }
 .uppercase {
   text-transform: uppercase;
@@ -110,7 +110,7 @@ nav {
   width: 100%;
 }
 nav a {
-  display: inline-block;
+  display: inline;
   padding: 15px 20px;
   text-decoration: none;
   text-transform: uppercase;
